# ophidia-terminal

./: .gitignore  AUTHORS.md  HISTORY.md  Makefile.am  NOTICE.md  README.md  bootstrap  configure.ac
m4/: m4_ax_lib_readline.m4
src/: Makefile.am  oph_license.h  oph_term.c  oph_term.h
src/client/: oph_execute_main.h  oph_term_client.h  oph_term_defs.h  soapC.c  soapClient.c  soapH.h  soapStub.h
src/client/gsi/: gsi.c  gsi.h  oph_term_client.c
src/client/ssl/: oph_term_client.c
src/client/wps/: oph_term_client.c
src/env/: hashtbl.c  hashtbl.h  oph_term_env.c  oph_term_env.h  oph_term_status.h
src/help/: oph_term_help.c  oph_term_help.h
src/viewer/: oph_term_viewer.c  oph_term_viewer.h
src/viewer/oph_json/: oph_json_common.c  oph_json_common.h  oph_json_graph.c  oph_json_graph.h  oph_json_grid.c  oph_json_grid.h  oph_json_library.h  oph_json_multigrid.c  oph_json_multigrid.h  oph_json_text.c  oph_json_text.h  oph_json_tree.c  oph_json_tree.h
src/workflow/: oph_workflow_define.h  oph_workflow_exit_codes.h  oph_workflow_functions.h  oph_workflow_library.h  oph_workflow_parsing.c  oph_workflow_setup.c  oph_workflow_status_codes.h  oph_workflow_structs.c  oph_workflow_structs.h
